// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bookmark-prompt > bookmark list rendering > deduplicates bookmarks 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 main**]                                                                                   [dim:│]",
  "[dim:│] 󰃀 feature-a[0m                                                                                                          [dim:│]",
  "[dim:│] 󰃀 feature-b[0m                                                                                                          [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > bookmark list rendering > filters bookmarks by search query and shows unmatched as create option 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  feat[accent:▏][0m                                                                                                    [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 feature-login**]                                                                          [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > bookmark list rendering > renders a single bookmark 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 main**]                                                                                   [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > bookmark list rendering > renders multiple bookmarks with consistent padding 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 main**]                                                                                   [dim:│]",
  "[dim:│] 󰃀 feature-login[0m                                                                                                      [dim:│]",
  "[dim:│] 󰃀 fix-bug-42[0m                                                                                                         [dim:│]",
  "[dim:│] 󰃀 docs/readme[0m                                                                                                        [dim:│]",
  "[dim:│] 󰃀 release/v1.0[0m                                                                                                       [dim:│]",
  "[dim:│][dim: 1/6][0m                                                                                                            [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > bookmark list rendering > shows all bookmarks when query is empty 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 alpha**]                                                                                  [dim:│]",
  "[dim:│] 󰃀 beta[0m                                                                                                               [dim:│]",
  "[dim:│] 󰃀 gamma[0m                                                                                                              [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > bookmark list rendering > shows bookmark count indicator when there are many bookmarks 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 bookmark-000**]                                                                           [dim:│]",
  "[dim:│] 󰃀 bookmark-001[0m                                                                                                       [dim:│]",
  "[dim:│] 󰃀 bookmark-002[0m                                                                                                       [dim:│]",
  "[dim:│] 󰃀 bookmark-003[0m                                                                                                       [dim:│]",
  "[dim:│] 󰃀 bookmark-004[0m                                                                                                       [dim:│]",
  "[dim:│][dim: 1/8][0m                                                                                                            [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > bookmark list rendering > shows create-only option when query matches no bookmarks 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  xyz-nonexistent[accent:▏][0m                                                                                         [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** [warning:󰐕] [warning:new] xyz-nonexistent**]                                                [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > different terminal widths > renders at narrow width 1`] = `
[
  "[dim:╭──────────────────────][accent:** Set Bookmark **][dim:──────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                            [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 main**]                       [dim:│]",
  "[dim:│] 󰃀 feature-a[0m                                              [dim:│]",
  "[dim:│] 󰃀 fix-bug[0m                                                [dim:│]",
  "[dim:│][0m                                                          [dim:│]",
  "[dim:│][0m                                                          [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m          [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > different terminal widths > renders at wide width 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                                                                [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 main**]                                                                                                                           [dim:│]",
  "[dim:│] 󰃀 feature-a[0m                                                                                                                                                  [dim:│]",
  "[dim:│] 󰃀 fix-bug[0m                                                                                                                                                    [dim:│]",
  "[dim:│][0m                                                                                                                                                              [dim:│]",
  "[dim:│][0m                                                                                                                                                              [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                                                              [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > empty state > renders empty state when no bookmarks exist 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][dim: No bookmarks yet. Type to create one.][0m                                                                          [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:type bookmark • enter set • esc cancel][0m                                                                         [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > error state > renders a generic error message when stderr is empty 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][error: Error: Failed to load bookmarks][0m                                                                              [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:esc cancel][0m                                                                                                     [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > error state > renders an error when jj bookmark list fails 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][error: Error: bookmark 'list' is not a jj command][0m                                                                   [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:esc cancel][0m                                                                                                     [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > loading state > renders the loading state while bookmarks are being fetched 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][dim: Loading bookmarks...][0m                                                                                           [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:enter set • ↑↓ nav • esc cancel][0m                                                                                [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > navigation and selection > clamps selection to max when pressing down at end 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] 󰃀 alpha[0m                                                                                                              [dim:│]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 beta**]                                                                                   [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > navigation and selection > moves selection down on arrow-down key 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] 󰃀 alpha[0m                                                                                                              [dim:│]",
  "[dim:│] 󰃀 beta[0m                                                                                                               [dim:│]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 gamma**]                                                                                  [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > navigation and selection > moves selection up on arrow-up key 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  [accent:▏][0m                                                                                                        [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] 󰃀 alpha[0m                                                                                                              [dim:│]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 beta**]                                                                                   [dim:│]",
  "[dim:│] 󰃀 gamma[0m                                                                                                              [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > text input behavior > handles backspace in the input 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  be[accent:▏][0m                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** 󰃀 beta**]                                                                                   [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;

exports[`bookmark-prompt > text input behavior > handles typed new bookmark name for creation 1`] = `
[
  "[dim:╭────────────────────────────────────────────────────][accent:** Set Bookmark **][dim:────────────────────────────────────────────────────╮]",
  "[dim:│] 󰃀  new-feature[accent:▏][0m                                                                                             [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│][BG:selectedBg:[accent:** [warning:󰐕] [warning:new] new-feature**]                                                    [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:│][0m                                                                                                                      [dim:│]",
  "[dim:├][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:┤]",
  "[dim:│] [dim:↑↓ nav • enter select/create • esc cancel][0m                                                                      [dim:│]",
  "[dim:╰][dim:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][dim:╯]",
]
`;
